--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
   <link rel="stylesheet" href="app.css">
-
+  <base href="/IOUI/">
  <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body ng-controller="AppCtrl" layout="column" layout-fill>
@@ -61,6 +61,7 @@
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-material/angular-material.js"></script>
   <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+  <script src="bower_components/jsonld/js/jsonld.js"></script>
   <script src="app.js"></script>
   <script src="views/main/main.js"></script>
   <script src="views/model/model.js"></script>
