remove placeholder templates

--- a/src/index.html
+++ b/src/index.html
@@ -12,22 +12,8 @@
 
 <body ng-controller="AppCtrl" layout="column" layout-fill>
 
-  <md-toolbar layout="row" layout-align="space-between center">
-    <!--The left side-->
-    <div class="md-toolbar-tools">
-      <span>IOW</span>
-      <!--The right side-->
-      <md-tabs md-stretch-tabs class="md-primary" md-selected="selectedIndex">
-        <md-tab class="tab">
-          <a href="#/main">Main</a>
-        </md-tab>
-        <md-tab class="tab">
-          <a href="#/model">Model</a>
-        </md-tab>
-      </md-tabs>
-      <md-button>Login</md-button>
-    </div>
-  </md-toolbar>
+  <h1>IOW</h1>
+  <button class="btn btn-default">we are flat</button>
 
   <div ng-view></div>
 
