--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body ng-controller="AppCtrl" layout="column" layout-fill>
-
-  <h1>IOW</h1>
-  <button class="btn btn-default">we are flat</button>
+  <h1>iow</h1>
+  <tabset>
+    <tab heading="main tab">tab content</tab>
+  </tabset>
 
   <div ng-view></div>
 
