better demo content

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,14 @@
 </head>
 
 <body ng-controller="AppCtrl" layout="column" layout-fill>
-  <h1>iow</h1>
   <tabset>
     <tab heading="main tab">
       This is xeditable <a href="#" editable-text="user.name">{{ user.name || "empty" }}</a>
+      <p>
+        <a class="btn btn-primary">foo</a>
+      </p>
     </tab>
+    <tab heading="second"></tab>
   </tabset>
 
   <div ng-view></div>
