style group list better

--- a/src/groups/_groupList.html
+++ b/src/groups/_groupList.html
@@ -1,4 +1,8 @@
-<h3>Ryhmät</h3>
-<ul>
-  <li ng-repeat="group in groups">{{group}}</li>
-</ul>
+<div class="panel panel-default group-panel">
+  <div class="panel-heading">Ryhmät</div>
+  <div class="panel-body">
+    <ul>
+      <li ng-repeat="group in groups">{{group}}</li>
+    </ul>
+  </div>
+</div>
