style group list

--- a/src/groups/_groupList.html
+++ b/src/groups/_groupList.html
@@ -1,8 +1,8 @@
 <div class="panel panel-default group-panel">
   <div class="panel-heading">Ryhmät</div>
-  <div class="panel-body">
-    <ul>
-      <li ng-repeat="group in groups">{{group}}</li>
+  <div class="panel-body list-panel">
+    <ul class="group-list">
+      <li class="group-list-item" ng-repeat="group in groups">{{group}}</li>
     </ul>
   </div>
 </div>
