--- a/src/groups/_groupList.html
+++ b/src/groups/_groupList.html
@@ -1,8 +1,8 @@
-<div class="panel panel-default group-panel">
+<div class="frontpage-panel">
   <div class="panel-heading">Ryhmät</div>
-  <div class="panel-body list-panel">
-    <ul class="group-list">
-      <li class="group-list-item" ng-repeat="group in groups">{{group}}</li>
+  <div class="frontpage-panel__list-panel">
+    <ul class="frontpage-panel__list">
+      <li class="frontpage-panel__list__item" ng-repeat="group in groups">{{group}}</li>
     </ul>
   </div>
 </div>
