--- a/src/groups/_groupList.html
+++ b/src/groups/_groupList.html
@@ -1,6 +1,6 @@
 <div class="frontpage-panel">
   <div class="panel-heading">Ryhmät</div>
-  <div class="frontpage-panel__list-panel">
+  <div class="frontpage-panel__body">
     <ul class="frontpage-panel__list">
       <li class="frontpage-panel__list__item" ng-repeat="group in groups">{{group}}</li>
     </ul>
