title as parameter to grouplist

--- a/src/main/_index.html
+++ b/src/main/_index.html
@@ -8,6 +8,7 @@
     </ol>
   </div>
   <div class="col-md-6">
-    <group-list></group-list>
+    <group-list title="{{'Selaa' | translate}}"></group-list>
+    <group-list title="{{'Uusimmat kuvaukset' | translate}}"></group-list>
   </div>
 </div>
