link back to frontpage

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body ng-controller="AppCtrl" layout="column" layout-fill>
   <nav class="navbar navbar-default">
     <div class="navbar-header">
-      <span class="navbar-brand">IOW</span>
+      <a class="navbar-brand" href="#/">IOW</a>
     </div>
   </nav>
 
