add stub language chooser

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="#/">IOW</a>
     </div>
+    <ul class="nav navbar-nav navbar-right">
+      <li><global-language-chooser></global-language-chooser></li>
+    </ul>
   </nav>
 
   <div ng-view></div>
