rename myApp -> iow-ui

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myApp" ng-strict-di>
+<html lang="en" ng-app="iow-ui" ng-strict-di>
 
 <head>
   <meta charset="utf-8">
