Some login infra implemented, at least localizations are still missing
Experimenting with with es6 classes and module export syntax

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li>Data language <model-language-chooser></model-language-chooser></li>
       <li>UI language <global-language-chooser></global-language-chooser></li>
+      <li><login></login></li>
     </ul>
   </nav>
 
