--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/app.css">
 </head>
 
-<body ng-controller="AppCtrl" layout="column" layout-fill ng-if="languageInitialized && userInitialized">
+<body ng-controller="AppCtrl" layout="column" layout-fill ng-if="applicationInitialized">
   <nav class="navbar navbar-default">
     <div class="navbar-header">
       <a class="navbar-brand" href="#/">IOW</a>
