--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
       <a class="navbar-brand" href="#/">IOW</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
-      <li>Data language <model-language-chooser></model-language-chooser></li>
-      <li>UI language <global-language-chooser></global-language-chooser></li>
+      <li>{{'Data language' | translate}} <model-language-chooser></model-language-chooser></li>
+      <li>{{'UI language' | translate}} <global-language-chooser></global-language-chooser></li>
       <li><login></login></li>
     </ul>
   </nav>
