Property creation with new predicate based on concept

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -1,3 +1,5 @@
 <!-- hints for angular-gettext for template localization keys -->
 
 <div translate>not found in the concept database</div>
+<div translate>Define concept for the new class</div>
+<div translate>Define concept for the new predicate</div>
