Unify classView and predicateView as editorView

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -3,3 +3,5 @@
 <div translate>not found in the concept database</div>
 <div translate>Define concept for the new class</div>
 <div translate>Define concept for the new predicate</div>
+<div translate>Delete class</div>
+<div translate>Delete predicate</div>
