UI for new concept suggestion

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -5,3 +5,5 @@
 <div translate>Define concept for the new predicate</div>
 <div translate>Delete class</div>
 <div translate>Delete predicate</div>
+<div translate>suggest</div>
+<div translate>and create new</div>
