Show concept suggestions in concept search

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -6,4 +6,5 @@
 <div translate>Delete class</div>
 <div translate>Delete predicate</div>
 <div translate>suggest</div>
+<div translate>suggestion</div>
 <div translate>and create new</div>
