Get rid of xeditable

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -8,3 +8,5 @@
 <div translate>suggest</div>
 <div translate>suggestion</div>
 <div translate>and create new</div>
+<div translate>Example</div>
+<div translate>Value class</div>
