--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -1,7 +1,9 @@
 <!-- hints for angular-gettext for template localization keys -->
 
 <div translate>not found in the concept database</div>
+<div translate>Define concept for the class</div>
 <div translate>Define concept for the new class</div>
+<div translate>Define concept for the predicate</div>
 <div translate>Define concept for the new predicate</div>
 <div translate>Delete class</div>
 <div translate>Delete predicate</div>
@@ -10,3 +12,4 @@
 <div translate>and create new</div>
 <div translate>Example</div>
 <div translate>Value class</div>
+<div translate>Use</div>
