State showing and selection

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -13,3 +13,8 @@
 <div translate>Example</div>
 <div translate>Value class</div>
 <div translate>Use</div>
+<div translate>State</div>
+<div translate>Unstable</div>
+<div translate>Draft</div>
+<div translate>Recommendation</div>
+<div translate>Deprecated</div>
