Hiding model by default vol2

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -18,3 +18,5 @@
 <div translate>Draft</div>
 <div translate>Recommendation</div>
 <div translate>Deprecated</div>
+<div translate>Show</div>
+<div translate>Hide</div>
