--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -20,3 +20,10 @@
 <div translate>Deprecated</div>
 <div translate>Show</div>
 <div translate>Hide</div>
+<div translate>Front page</div>
+<div translate>New model creation</div>
+<div translate>group</div>
+<div translate>model</div>
+<div translate>class</div>
+<div translate>attribute</div>
+<div translate>association</div>
