--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -27,3 +27,7 @@
 <div translate>class</div>
 <div translate>attribute</div>
 <div translate>association</div>
+<div translate>data fi</div>
+<div translate>fi</div>
+<div translate>data en</div>
+<div translate>en</div>
