Modal template directive implemented along with confirmationModalFactory

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -31,3 +31,7 @@
 <div translate>fi</div>
 <div translate>data en</div>
 <div translate>en</div>
+<div translate>Edit in progress</div>
+<div translate>Are you sure that you want to cancel edit?</div>
+<div translate>Confirm delete</div>
+<div translate>Are you sure that you want to delete?</div>
