Lots of duplication refactored away

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -35,3 +35,12 @@
 <div translate>Are you sure that you want to cancel edit?</div>
 <div translate>Confirm delete</div>
 <div translate>Are you sure that you want to delete?</div>
+<div translate>Add class</div>
+<div translate>Delete class</div>
+<div translate>Class list</div>
+<div translate>Add attribute</div>
+<div translate>Delete attribute</div>
+<div translate>Attribute list</div>
+<div translate>Add association</div>
+<div translate>Delete association</div>
+<div translate>Association list</div>
