Remove copy paste

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -44,3 +44,11 @@
 <div translate>Add association</div>
 <div translate>Delete association</div>
 <div translate>Association list</div>
+<div translate>Id</div>
+<div translate>Name</div>
+<div translate>Range</div>
+<div translate>Type</div>
+<div translate>Is defined by</div>
+<div translate>Superclass</div>
+<div translate>Preferred namespace</div>
+<div translate>Preferred prefix</div>
