Editing super class / property implemented
Closes #133

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -50,5 +50,9 @@
 <div translate>Type</div>
 <div translate>Is defined by</div>
 <div translate>Superclass</div>
+<div translate>Superassociation</div>
+<div translate>Superattribute</div>
 <div translate>Preferred namespace</div>
 <div translate>Preferred prefix</div>
+<div translate>Choose attribute</div>
+<div translate>Choose association</div>
