Bullets to front page

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -56,3 +56,11 @@
 <div translate>Preferred prefix</div>
 <div translate>Choose attribute</div>
 <div translate>Choose association</div>
+<div translate>What is description?</div>
+<div translate>What is description content</div>
+<div translate>What is method?</div>
+<div translate>What is method content</div>
+<div translate>What can I do?</div>
+<div translate>What can I do content</div>
+<div translate>How?</div>
+<div translate>How content</div>
