Differentiate removal from defining model vs reference
Closes #156

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -5,8 +5,6 @@
 <div translate>Define concept for the new class</div>
 <div translate>Define concept for the predicate</div>
 <div translate>Define concept for the new predicate</div>
-<div translate>Delete class</div>
-<div translate>Delete predicate</div>
 <div translate>suggest</div>
 <div translate>suggestion</div>
 <div translate>and create new</div>
@@ -37,12 +35,15 @@
 <div translate>Are you sure that you want to delete?</div>
 <div translate>Add class</div>
 <div translate>Delete class</div>
+<div translate>Delete class from this model</div>
 <div translate>Class list</div>
 <div translate>Add attribute</div>
 <div translate>Delete attribute</div>
+<div translate>Delete attribute from this model</div>
 <div translate>Attribute list</div>
 <div translate>Add association</div>
 <div translate>Delete association</div>
+<div translate>Delete association from this model</div>
 <div translate>Association list</div>
 <div translate>Id</div>
 <div translate>Name</div>
