--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -65,3 +65,8 @@
 <div translate>What can I do content</div>
 <div translate>How?</div>
 <div translate>How content</div>
+<div translate>Model label</div>
+<div translate>Group label</div>
+<div translate>Class label</div>
+<div translate>Association label</div>
+<div translate>Attribute label</div>
