Fix localization messages for concept dialog titles

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -3,8 +3,10 @@
 <div translate>not found in the concept database</div>
 <div translate>Define concept for the class</div>
 <div translate>Define concept for the new class</div>
-<div translate>Define concept for the predicate</div>
-<div translate>Define concept for the new predicate</div>
+<div translate>Define concept for the attribute</div>
+<div translate>Define concept for the new attribute</div>
+<div translate>Define concept for the association</div>
+<div translate>Define concept for the new association</div>
 <div translate>suggest</div>
 <div translate>suggestion</div>
 <div translate>and create new</div>
