Show referrers of permanently deleted items
Closes #157

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -72,3 +72,8 @@
 <div translate>Class label</div>
 <div translate>Association label</div>
 <div translate>Attribute label</div>
+<div translate>of group</div>
+<div translate>of model</div>
+<div translate>of class</div>
+<div translate>of association</div>
+<div translate>of attribute</div>
