Remove preferred from namespace and prefix, show namespace/prefix under model
Closes #182

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -55,8 +55,8 @@
 <div translate>Superclass</div>
 <div translate>Superassociation</div>
 <div translate>Superattribute</div>
-<div translate>Preferred namespace</div>
-<div translate>Preferred prefix</div>
+<div translate>Namespace</div>
+<div translate>Prefix</div>
 <div translate>Choose attribute</div>
 <div translate>Choose association</div>
 <div translate>What is description?</div>
