Deleting model implemented

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -22,6 +22,7 @@
 <div translate>Hide</div>
 <div translate>Front page</div>
 <div translate>New model creation</div>
+<div translate>Delete model</div>
 <div translate>group</div>
 <div translate>model</div>
 <div translate>class</div>
