More exact localizations

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -78,3 +78,14 @@
 <div translate>of class</div>
 <div translate>of association</div>
 <div translate>of attribute</div>
+<div translate>search attribute or association</div>
+<div translate>Search attributes</div>
+<div translate>search attribute</div>
+<div translate>Search associations</div>
+<div translate>search association</div>
+<div translate>Use selection</div>
+<div translate>Use attribute</div>
+<div translate>Use association</div>
+<div translate>Create and use attribute</div>
+<div translate>Create and use association</div>
+<div translate>Label</div>
