Multiple curie select component

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -58,6 +58,7 @@
 <div translate>Superattribute</div>
 <div translate>Namespace</div>
 <div translate>Prefix</div>
+<div translate>Choose class</div>
 <div translate>Choose attribute</div>
 <div translate>Choose association</div>
 <div translate>What is description?</div>
@@ -89,3 +90,6 @@
 <div translate>Create and use attribute</div>
 <div translate>Create and use association</div>
 <div translate>Label</div>
+<div translate>Equivalent class</div>
+<div translate>Equivalent attribute</div>
+<div translate>Equivalent association</div>
