Show localized errorMessage when API call fails
Closes #196

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -93,3 +93,11 @@
 <div translate>Equivalent class</div>
 <div translate>Equivalent attribute</div>
 <div translate>Equivalent association</div>
+<div translate>Unauthorized</div>
+<div translate>Invalid ID</div>
+<div translate>ID is already in use</div>
+<div translate>Unexpected error</div>
+<div translate>Not found</div>
+<div translate>Not removed</div>
+<div translate>Resource status restricts removing</div>
+<div translate>Resource is in use</div>
