--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,9 @@
 
   <breadcrumb></breadcrumb>
 
-  <div class="main" ng-view></div>
+  <div ng-class="['main', { 'with-footer': showFooter() }]" ng-view></div>
+
+  <footer ng-if="showFooter()"></footer>
 
   <script src="js/vendor.js"></script>
   <script src="js/app.js"></script>
