--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
   <script src="js/vendor.js"></script>
   <script src="js/app.js"></script>
 
+  <google-analytics ng-if="production"></google-analytics>
 </body>
 
 </html>
