--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body ng-controller="AppCtrl" layout="column" layout-fill ng-show="applicationInitialized">
   <nav class="navbar navbar-default">
     <div class="navbar-header">
-      <a class="navbar-brand" ng-href="#/">IOW</a>
+      <a class="navbar-brand" ng-href="#/"><span class="logo">&#x2b21;</span> {{'IOW' | translate}}</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
       <li><global-language-chooser></global-language-chooser></li>
