--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,27 @@
   <link rel="stylesheet" href="css/app.css">
 </head>
 
-<body ng-controller="AppCtrl" layout="column" layout-fill ng-show="applicationInitialized">
+<body ng-controller="AppCtrl as ctrl" layout="column" layout-fill ng-show="applicationInitialized">
   <nav class="navbar navbar-default">
     <div class="navbar-header">
-      <a class="navbar-brand" ng-href="#/"><span class="logo">&#x2b21;</span> {{'IOW' | translate}}</a>
+      <a class="navbar-brand" ng-href="#/"><div class="hexagon"></div>{{'IOW' | translate}}</a>
     </div>
+
     <ul class="nav navbar-nav navbar-right">
-      <li><global-language-chooser></global-language-chooser></li>
-      <li><login></login></li>
+      <li ng-repeat="language in ctrl.languages">
+        <a ng-click="ctrl.language = language.code">{{language.name}}</a>
+      </li>
+      <li ng-hide="ctrl.getUser().isLoggedIn()">
+        <a ng-click="ctrl.openLogin()" translate>Login</a>
+      </li>
+      <li ng-show="ctrl.getUser().isLoggedIn()">
+        <div class="btn-group navbar-btn" uib-dropdown is-open="status.isopen">
+          <button class="btn btn-default navbar-btn" uib-dropdown-toggle>{{ctrl.getUser().name}} <span class="caret"></span></button>
+          <ul class="dropdown-menu" role="menu">
+            <li role="menuitem"><a ng-click="ctrl.logout()" translate>Logout</a></li>
+          </ul>
+        </div>
+      </li>
     </ul>
   </nav>
 
