Show already added entities as disabled in search dialogs
Closes #208

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -101,3 +101,4 @@
 <div translate>Not removed</div>
 <div translate>Resource status restricts removing</div>
 <div translate>Resource is in use</div>
+<div translate>Already added</div>
