All curie inputs to have placeholder
Closes #228

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -102,3 +102,4 @@
 <div translate>Resource status restricts removing</div>
 <div translate>Resource is in use</div>
 <div translate>Already added</div>
+<div translate>Write identifier</div>
