Headers to separate sections in editor

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -103,3 +103,5 @@
 <div translate>Resource is in use</div>
 <div translate>Already added</div>
 <div translate>Write identifier</div>
+<div translate>Attribute information</div>
+<div translate>Association information</div>
