--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -105,3 +105,4 @@
 <div translate>Write identifier</div>
 <div translate>Attribute information</div>
 <div translate>Association information</div>
+<div translate>Show already added</div>
