Refactor concept related data sets from modal to service

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -106,3 +106,4 @@
 <div translate>Attribute information</div>
 <div translate>Association information</div>
 <div translate>Show already added</div>
+<div translate>Concept</div>
