Optional broader concept when creating a new concept suggestion
Closes #243

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -107,3 +107,4 @@
 <div translate>Association information</div>
 <div translate>Show already added</div>
 <div translate>Concept</div>
+<div translate>Broader concept</div>
