--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -25,6 +25,8 @@
 <div translate>Delete model</div>
 <div translate>group</div>
 <div translate>model</div>
+<div translate>shape</div>
+<div translate>profile</div>
 <div translate>class</div>
 <div translate>attribute</div>
 <div translate>association</div>
