Unify model with profile and shape with class in the UI components

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -40,7 +40,9 @@
 <div translate>Are you sure that you want to delete?</div>
 <div translate>Add class</div>
 <div translate>Delete class</div>
+<div translate>Delete shape</div>
 <div translate>Delete class from this model</div>
+<div translate>Delete shape from this model</div>
 <div translate>Class list</div>
 <div translate>Add attribute</div>
 <div translate>Delete attribute</div>
@@ -74,6 +76,7 @@
 <div translate>Model label</div>
 <div translate>Group label</div>
 <div translate>Class label</div>
+<div translate>Shape label</div>
 <div translate>Association label</div>
 <div translate>Attribute label</div>
 <div translate>of group</div>
@@ -105,8 +108,12 @@
 <div translate>Resource is in use</div>
 <div translate>Already added</div>
 <div translate>Write identifier</div>
+<div translate>Class information</div>
+<div translate>Shape information</div>
 <div translate>Attribute information</div>
 <div translate>Association information</div>
+<div translate>Class properties</div>
+<div translate>Shape properties</div>
 <div translate>Show already added</div>
 <div translate>Concept</div>
 <div translate>Broader concept</div>
