--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -23,6 +23,7 @@
 <div translate>Front page</div>
 <div translate>New model creation</div>
 <div translate>Delete model</div>
+<div translate>Delete profile</div>
 <div translate>group</div>
 <div translate>model</div>
 <div translate>shape</div>
@@ -74,6 +75,7 @@
 <div translate>How?</div>
 <div translate>How content</div>
 <div translate>Model label</div>
+<div translate>Profile label</div>
 <div translate>Group label</div>
 <div translate>Class label</div>
 <div translate>Shape label</div>
