Contextualize id localization

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -54,6 +54,10 @@
 <div translate>Delete association from this model</div>
 <div translate>Association list</div>
 <div translate>Id</div>
+<div translate>Class id</div>
+<div translate>Shape id</div>
+<div translate>Attribute id</div>
+<div translate>Association id</div>
 <div translate>Name</div>
 <div translate>Range</div>
 <div translate>Type</div>
