Scope class instead of super class for shapes

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -63,6 +63,7 @@
 <div translate>Type</div>
 <div translate>Is defined by</div>
 <div translate>Superclass</div>
+<div translate>Specialized from class</div>
 <div translate>Superassociation</div>
 <div translate>Superattribute</div>
 <div translate>Namespace</div>
