--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -124,3 +124,5 @@
 <div translate>Show already added</div>
 <div translate>Concept</div>
 <div translate>Broader concept</div>
+<div translate>Min count</div>
+<div translate>Max count</div>
