Contextualize link removal text

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -48,10 +48,12 @@
 <div translate>Add attribute</div>
 <div translate>Delete attribute</div>
 <div translate>Delete attribute from this model</div>
+<div translate>Delete attribute from this profile</div>
 <div translate>Attribute list</div>
 <div translate>Add association</div>
 <div translate>Delete association</div>
 <div translate>Delete association from this model</div>
+<div translate>Delete association from this profile</div>
 <div translate>Association list</div>
 <div translate>Id</div>
 <div translate>Class id</div>
