Export component implemented

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -128,3 +128,7 @@
 <div translate>Broader concept</div>
 <div translate>Min count</div>
 <div translate>Max count</div>
+<div translate>application/ld+json</div>
+<div translate>text/turtle</div>
+<div translate>application/rdf+xml</div>
+<div translate>framed ld+json</div>
