Allow pattern editing in profile

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -132,3 +132,4 @@
 <div translate>text/turtle</div>
 <div translate>application/rdf+xml</div>
 <div translate>framed ld+json</div>
+<div translate>Pattern</div>
