JSON-LD frame for download

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -132,4 +132,5 @@
 <div translate>text/turtle</div>
 <div translate>application/rdf+xml</div>
 <div translate>framed ld+json</div>
+<div translate>ld+json frame</div>
 <div translate>Pattern</div>
