--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -134,3 +134,10 @@
 <div translate>framed ld+json</div>
 <div translate>ld+json frame</div>
 <div translate>Pattern</div>
+<div translate>date format</div>
+<div translate>User login</div>
+<div translate>User name</div>
+<div translate>Created at</div>
+<div translate>Modified at</div>
+<div translate>Member groups</div>
+<div translate>Admin groups</div>
