--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -141,3 +141,4 @@
 <div translate>Modified at</div>
 <div translate>Member groups</div>
 <div translate>Admin groups</div>
+<div translate>Constraint comment</div>
