When selecting scope class show user a modal for selecting properties
Closes #261

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -142,3 +142,7 @@
 <div translate>Member groups</div>
 <div translate>Admin groups</div>
 <div translate>Constraint comment</div>
+<div translate>Add properties from super class</div>
+<div translate>Add properties from scope class</div>
+<div translate>Do you want to add following properties from super class?</div>
+<div translate>Do you want to add following properties from scope class?</div>
