Show all models in search dialogs but disable selection

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -123,7 +123,7 @@
 <div translate>Association information</div>
 <div translate>Class properties</div>
 <div translate>Shape properties</div>
-<div translate>Show already added</div>
+<div translate>Show excluded</div>
 <div translate>Concept</div>
 <div translate>Broader concept</div>
 <div translate>Min count</div>
@@ -146,3 +146,5 @@
 <div translate>Add properties from scope class</div>
 <div translate>Do you want to add following properties from super class?</div>
 <div translate>Do you want to add following properties from scope class?</div>
+<div translate>Not required by model</div>
+<div translate>Cannot require profile</div>
