Make defined by exclusion explicit decision of modal user
Also unify search class type into the exclude mechanism.

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -148,3 +148,6 @@
 <div translate>Do you want to add following properties from scope class?</div>
 <div translate>Not required by model</div>
 <div translate>Cannot require profile</div>
+<div translate>Shapes are not allowed</div>
+<div translate>Classes are not allowed</div>
+<div translate>Non specialized classes are not allowed</div>
