Generalize class from profile to library
Closes #275

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -144,10 +144,15 @@
 <div translate>Constraint comment</div>
 <div translate>Add properties from super class</div>
 <div translate>Add properties from scope class</div>
+<div translate>Add properties from profile class</div>
 <div translate>Do you want to add following properties from super class?</div>
 <div translate>Do you want to add following properties from scope class?</div>
+<div translate>Do you want to add following properties from profile class?</div>
 <div translate>Not required by model</div>
 <div translate>Cannot require profile</div>
 <div translate>Shapes are not allowed</div>
 <div translate>Classes are not allowed</div>
 <div translate>Non specialized classes are not allowed</div>
+<div translate>Use class</div>
+<div translate>Generalize class</div>
+<div translate>Specialize class</div>
