Resource history modal implemented
Closes #281

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -22,7 +22,7 @@
 <div translate>Hide</div>
 <div translate>Front page</div>
 <div translate>New model creation</div>
-<div translate>Delete model</div>
+<div translate>Delete library</div>
 <div translate>Delete profile</div>
 <div translate>group</div>
 <div translate>model</div>
@@ -42,17 +42,17 @@
 <div translate>Add class</div>
 <div translate>Delete class</div>
 <div translate>Delete shape</div>
-<div translate>Delete class from this model</div>
-<div translate>Delete shape from this model</div>
+<div translate>Delete class from this library</div>
+<div translate>Delete shape from this library</div>
 <div translate>Class list</div>
 <div translate>Add attribute</div>
 <div translate>Delete attribute</div>
-<div translate>Delete attribute from this model</div>
+<div translate>Delete attribute from this library</div>
 <div translate>Delete attribute from this profile</div>
 <div translate>Attribute list</div>
 <div translate>Add association</div>
 <div translate>Delete association</div>
-<div translate>Delete association from this model</div>
+<div translate>Delete association from this library</div>
 <div translate>Delete association from this profile</div>
 <div translate>Association list</div>
 <div translate>Id</div>
@@ -81,7 +81,7 @@
 <div translate>What can I do content</div>
 <div translate>How?</div>
 <div translate>How content</div>
-<div translate>Model label</div>
+<div translate>Library label</div>
 <div translate>Profile label</div>
 <div translate>Group label</div>
 <div translate>Class label</div>
@@ -117,6 +117,8 @@
 <div translate>Resource is in use</div>
 <div translate>Already added</div>
 <div translate>Write identifier</div>
+<div translate>Library information</div>
+<div translate>Profile information</div>
 <div translate>Class information</div>
 <div translate>Shape information</div>
 <div translate>Attribute information</div>
@@ -156,3 +158,6 @@
 <div translate>Use class</div>
 <div translate>Generalize class</div>
 <div translate>Specialize class</div>
+<div translate>Show history</div>
+<div translate>Historical versions</div>
+<div translate>Close</div>
