Separate normalizedType from selectionType, use normalizedType in all localizations
Closes #279

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -26,6 +26,7 @@
 <div translate>Delete profile</div>
 <div translate>group</div>
 <div translate>model</div>
+<div translate>library</div>
 <div translate>shape</div>
 <div translate>profile</div>
 <div translate>class</div>
