Root class selection to model, select root class by default
Closes #283

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -162,3 +162,5 @@
 <div translate>Show history</div>
 <div translate>Historical versions</div>
 <div translate>Close</div>
+<div translate>Can be selected only from this library</div>
+<div translate>Can be selected only from this profile</div>
