Add missing translations

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -91,7 +91,9 @@
 <div translate>Attribute label</div>
 <div translate>of group</div>
 <div translate>of model</div>
+<div translate>of profile</div>
 <div translate>of class</div>
+<div translate>of shape</div>
 <div translate>of association</div>
 <div translate>of attribute</div>
 <div translate>search attribute or association</div>
