--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="iow-ui" ng-strict-di ng-cloak>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/app.css">
 </head>
 
-<body>
+<body ng-cloak>
   <application></application>
   <script src="js/vendor.js"></script>
   <script src="js/app.js"></script>
