Localization: concept comment is definition, other comments are description

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -146,7 +146,7 @@
 <div translate>Modified at</div>
 <div translate>Member groups</div>
 <div translate>Admin groups</div>
-<div translate>Constraint comment</div>
+<div translate>Constraint description</div>
 <div translate>Add properties from super class</div>
 <div translate>Add properties from scope class</div>
 <div translate>Add properties from profile class</div>
@@ -166,3 +166,4 @@
 <div translate>Close</div>
 <div translate>Can be selected only from this library</div>
 <div translate>Can be selected only from this profile</div>
+<div translate>Description</div>
