Maintenance modal for error situations

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -167,3 +167,5 @@
 <div translate>Can be selected only from this library</div>
 <div translate>Can be selected only from this profile</div>
 <div translate>Description</div>
+<div translate>Maintenance</div>
+<div translate>Maintenance content</div>
