Internal group page link
Closes #301

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -169,3 +169,4 @@
 <div translate>Description</div>
 <div translate>Maintenance</div>
 <div translate>Maintenance content</div>
+<div translate>Internal group page</div>
