Localize breadcrumb for new library/profile creation
Closes #317

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -21,7 +21,8 @@
 <div translate>Show</div>
 <div translate>Hide</div>
 <div translate>Front page</div>
-<div translate>New model creation</div>
+<div translate>New library creation</div>
+<div translate>New profile creation</div>
 <div translate>Delete library</div>
 <div translate>Delete profile</div>
 <div translate>group</div>
