New export types JSON-LD Context and JSON Schema

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -137,6 +137,8 @@
 <div translate>application/ld+json</div>
 <div translate>text/turtle</div>
 <div translate>application/rdf+xml</div>
+<div translate>text/ld+json+context</div>
+<div translate>application/schema+json</div>
 <div translate>framed ld+json</div>
 <div translate>ld+json frame</div>
 <div translate>Pattern</div>
