Show validations formats along with validation messages

--- a/src/translations/attribute.html
+++ b/src/translations/attribute.html
@@ -2,18 +2,34 @@
 <!-- hints for angular-gettext for template localization keys -->
 
 <div translate>xsd:string</div>
+<div translate>xsd:string error</div>
 <div translate>rdf:langString</div>
+<div translate>rdf:langString error</div>
 <div translate>xsd:anyURI</div>
+<div translate>xsd:anyURI error</div>
 <div translate>xsd:boolean</div>
+<div translate>xsd:boolean error</div>
 <div translate>xsd:decimal</div>
+<div translate>xsd:decimal error</div>
 <div translate>xsd:double</div>
+<div translate>xsd:double error</div>
 <div translate>xsd:float</div>
+<div translate>xsd:float error</div>
 <div translate>xsd:integer</div>
+<div translate>xsd:integer error</div>
 <div translate>xsd:long</div>
+<div translate>xsd:long error</div>
 <div translate>xsd:int</div>
+<div translate>xsd:int error</div>
 <div translate>xsd:date</div>
+<div translate>xsd:date error</div>
 <div translate>xsd:dateTime</div>
+<div translate>xsd:dateTime error</div>
 <div translate>xsd:time</div>
+<div translate>xsd:time error</div>
 <div translate>xsd:gYear</div>
+<div translate>xsd:gYear error</div>
 <div translate>xsd:gMonth</div>
+<div translate>xsd:gMonth error</div>
 <div translate>xsd:gDay</div>
+<div translate>xsd:gDay error</div>
