--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>IOW</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700' rel='stylesheet' type='text/css'>
 </head>
 
 <body ng-cloak>
