Broader concept selection

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -171,3 +171,10 @@
 <div translate>Maintenance</div>
 <div translate>Maintenance content</div>
 <div translate>Internal group page</div>
+<div translate>Subject</div>
+<div translate>Broader concept</div>
+<div translate>Definition</div>
+<div translate>to vocabulary</div>
+<div translate>Create new class</div>
+<div translate>Create new attribute</div>
+<div translate>Create new association</div>
