Localize concept suggestion differently in selection

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -130,6 +130,7 @@
 <div translate>Shape properties</div>
 <div translate>Show excluded</div>
 <div translate>Concept</div>
+<div translate>Concept suggestion</div>
 <div translate>Broader concept</div>
 <div translate>Min count</div>
 <div translate>Max count</div>
