Deny self reference from constraint
Closes #298

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -179,3 +179,4 @@
 <div translate>Create new class</div>
 <div translate>Create new attribute</div>
 <div translate>Create new association</div>
+<div translate>Self reference not allowed</div>
