External class creation for profiles, better uriInput validation messages
Persisting doesn't work yet.

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -177,6 +177,12 @@
 <div translate>Definition</div>
 <div translate>to vocabulary</div>
 <div translate>Create new class</div>
+<div translate>Create new shape</div>
+<div translate>by referencing external uri</div>
+<div translate>External URI</div>
 <div translate>Create new attribute</div>
 <div translate>Create new association</div>
 <div translate>Self reference not allowed</div>
+<div translate>Invalid ID</div>
+<div translate>External class not found</div>
+
