--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -98,9 +98,11 @@
 <div translate>of association</div>
 <div translate>of attribute</div>
 <div translate>search attribute or association</div>
-<div translate>Search attributes</div>
+<div translate>Add attribute</div>
+<div translate>Select attribute</div>
 <div translate>search attribute</div>
-<div translate>Search associations</div>
+<div translate>Add association</div>
+<div translate>Select association</div>
 <div translate>search association</div>
 <div translate>Use selection</div>
 <div translate>Use attribute</div>
