Property identifier added
Closes #338

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -187,4 +187,5 @@
 <div translate>Self reference not allowed</div>
 <div translate>Invalid ID</div>
 <div translate>External class not found</div>
+<div translate>Property identifier</div>
 
