--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -136,6 +136,8 @@
 <div translate>Broader concept</div>
 <div translate>Min count</div>
 <div translate>Max count</div>
+<div translate>Min length</div>
+<div translate>Max length</div>
 <div translate>application/ld+json</div>
 <div translate>text/turtle</div>
 <div translate>application/rdf+xml</div>
