Default value added to property
Closes #322

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -190,4 +190,5 @@
 <div translate>Invalid ID</div>
 <div translate>External class not found</div>
 <div translate>Property identifier</div>
+<div translate>Default value</div>
 
