Nop validator that supports ValidatorWithFormat

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -191,4 +191,5 @@
 <div translate>External class not found</div>
 <div translate>Property identifier</div>
 <div translate>Default value</div>
-
+<div translate>Allowed values</div>
+<div translate>Input</div>
