Fixed value added to properties

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -193,3 +193,4 @@
 <div translate>Default value</div>
 <div translate>Allowed values</div>
 <div translate>Input</div>
+<div translate>Fixed value</div>
