Handle external predicate in class properties

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -194,3 +194,4 @@
 <div translate>Allowed values</div>
 <div translate>Input</div>
 <div translate>Fixed value</div>
+<div translate>Defined by</div>
