Related resources, persisting doesn't work yet for an unknown reason

--- a/src/translations/misc.html
+++ b/src/translations/misc.html
@@ -195,3 +195,5 @@
 <div translate>Input</div>
 <div translate>Fixed value</div>
 <div translate>Defined by</div>
+<div translate>Homepage</div>
+<div translate>Title</div>
