Added rdfs:Literal to data types

--- a/src/translations/attribute.html
+++ b/src/translations/attribute.html
@@ -3,6 +3,8 @@
 
 <div translate>xsd:string</div>
 <div translate>xsd:string error</div>
+<div translate>rdfs:Literal</div>
+<div translate>rdfs:Literal error</div>
 <div translate>rdf:langString</div>
 <div translate>rdf:langString error</div>
 <div translate>xsd:anyURI</div>
